# luma

./: .codex-luma-registry-smoke-tecent.yml  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.control  README.md  README.zh-CN.md  luma.yaml  package-lock.json  package.json  pyproject.toml
dashboard-src/: index.html  (+1 more)
lae/: .dockerignore  .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
lae/apps/api/: pyproject.toml
lae/apps/api/src/lae_api/: __init__.py  __main__.py  admin_api.py  app.py  application_api.py  application_lifecycle_api.py  auth_service.py  billing.py  credential_broker_api.py  deployment_api.py  email.py  object_source_broker_api.py  observability_api.py  plan_resolver.py  source_connection_api.py  support_api.py  template_api.py  upload_api.py
lae/apps/web/: DESIGN.md  next.config.ts  package.json  tsconfig.json
lae/apps/web/scripts/: check-scaffold.mjs
lae/apps/web/src/app/: globals.css  layout.tsx  luma-dashboard.css  page.tsx
lae/apps/web/src/app/account/: page.tsx
lae/apps/web/src/app/applications/[applicationId]/: page.tsx
lae/apps/web/src/app/login/: page.tsx
lae/apps/web/src/components/: account-console.tsx  application-detail-console.module.css  application-detail-console.tsx  auth-portal.tsx  lae-console.tsx  mock-checkout-console.tsx
lae/apps/web/src/lib/: lae-api.ts
lae/cli/: pyproject.toml
lae/cli/src/lae_cli/: __init__.py  __main__.py  client.py  config.py  errors.py  upload.py  watch.py
lae/deploy/luma/: .env.example  .global-secrets.example  README.md  docker-compose.staging.yml  docker-compose.yml  generate-staging-bundle.py  luma.compose.staging.itool.yml  luma.compose.staging.yml  luma.compose.yml  prepare-staging-release.py  smoke-images.sh  verify-agent-runner-contract.py
lae/deploy/luma/docker/: agent-controller.Dockerfile  agent-runner.Dockerfile  api-entrypoint.sh  api.Dockerfile  artifact-init.Dockerfile  artifact-init.sh  backup.Dockerfile  backup.sh  minio-healthcheck.go  minio.Dockerfile  template-smoke-entrypoint.sh  template-smoke.Dockerfile  valkey.Dockerfile  web.Dockerfile  worker-entrypoint.sh  worker.Dockerfile
lae/deploy/luma/migrations/storage-v1/: docker-compose.yml  luma.compose.yml
lae/deploy/luma/migrations/storage-v2/: docker-compose.yml  luma.compose.yml
lae/design-system/luma-application-engine/: MASTER.md
lae/e2e/fixtures/compose-failing-rollout/: README.md  compose.yaml
lae/e2e/fixtures/compose-two-http-volume/: README.md  compose.yaml
lae/e2e/fixtures/compose-two-http-volume/admin/: Dockerfile  server.py
lae/e2e/fixtures/compose-two-http-volume/web/: Dockerfile  server.py
lae/e2e/fixtures/compose-two-http-volume/worker/: Dockerfile  worker.py
lae/e2e/fixtures/compose-unsupported-host-access/: compose.yaml
lae/e2e/fixtures/nextjs-standalone/: Dockerfile  README.md  package-lock.json  package.json
lae/e2e/fixtures/nextjs-standalone/app/: layout.tsx  page.tsx
lae/e2e/fixtures/static-site/: README.md  index.html
lae/e2e/fixtures/static-site/assets/: site.css
lae/knowledge/v1/: knowledge-pack.json
lae/migrations/: alembic.ini  env.py
lae/migrations/versions/: 20260711_0001_lae_foundation.py  20260711_0002_auth_identity.py  20260711_0003_analysis_persistence.py  20260711_0004_application_catalog.py  20260711_0005_billing_mock.py  20260711_0006_source_connections.py  20260711_0007_static_uploads.py  20260711_0008_deployment_orchestration.py  20260711_0009_candidate_manifest.py  20260711_0010_application_lifecycle.py  20260711_0011_analysis_verdict.py  20260711_0012_retained_volume_binding.py  20260714_0013_template_health.py  20260722_0014_support_tickets.py
lae/scripts/: staging_product_e2e.py  staging_recovery_drill.py  staging_source_e2e.py  template_smoke.py
lae/services/agent-controller/: pyproject.toml
lae/services/agent-controller/src/lae_agent_controller/: __init__.py  __main__.py
lae/services/agent-runner/: pyproject.toml
lae/services/agent-runner/src/lae_agent_runner/: __init__.py  __main__.py
lae/services/worker/: README.md  pyproject.toml
lae/services/worker/src/lae_worker/: __init__.py  __main__.py  analyze.py  artifact_ingest.py  artifact_postgres.py  artifact_runtime.py  build_plan_materializer.py  credential_broker.py  deployment.py  deployment_postgres.py  lifecycle.py  postgres.py  runtime_secrets.py  static_upload.py  wiring.py
lae/skills/lae-deploy/: SKILL.md
lae/skills/lae-deploy/agents/: openai.yaml
lae/skills/lae-deploy/references/: cli-contract.md  knowledge-pack.json  policy.md
lae/tests/: test_admin_api.py  test_agent_controller.py  test_agent_runner.py  test_ai_client_retries.py  test_analysis_api.py  test_analysis_request_postgres_integration.py  test_api_readiness.py  test_application_api.py  test_application_api_postgres_integration.py  test_application_catalog.py  test_application_catalog_postgres_integration.py  test_application_lifecycle_api.py  test_application_lifecycle_postgres_integration.py  test_application_purge.py  test_auth_api.py  test_auth_domain.py  test_auth_postgres_integration.py  test_billing_api.py  test_billing_postgres_integration.py  test_china_payments.py  test_cli.py  test_cli_sources_upload.py  test_contracts.py  test_cors_api.py  test_credential_broker_api.py  test_deployment_admission.py  test_deployment_admission_postgres_integration.py  test_deployment_api.py  test_deployment_plan_resolver.py  test_e2e_fixtures.py  test_email_sender.py  test_environment_crypto.py  test_luma_adapter_contract.py  test_luma_adapter_fake.py  test_luma_adapter_http.py  test_luma_runtime_adapter.py  test_object_source_broker_api.py  test_observability_api.py  test_platform_dockerfiles.py  test_public_resource_api.py  (+32 more)
luma/assets/: Dockerfile.control  README.md  pyproject.toml
luma/assets/dashboard/: app.js  index.html  styles.css
luma/assets/stacks/core/egress-gateway/: stack.yml
luma/assets/stacks/core/luma-control/: stack.yml
luma/assets/stacks/core/portainer/: stack.yml
luma/assets/stacks/core/traefik/: stack.yml
(+217 files in other folders)
