[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "lae-cli"
version = "0.1.0"
description = "Machine-friendly CLI for Luma Application Engine"
requires-python = ">=3.12"
dependencies = ["lae-contracts", "lae-core"]

[project.scripts]
lae = "lae_cli.__main__:main"

[tool.uv.sources]
lae-contracts = { workspace = true }
lae-core = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]
