[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "luma-infra"
version = "0.1.45"
description = "Declarative deployment CLI for region-aware Docker Swarm infrastructure."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0.1",
]

[project.scripts]
luma = "luma.cli:main"

[tool.setuptools.packages.find]
include = ["luma*"]

[tool.setuptools.package-data]
luma = [
  "assets/Dockerfile.control",
  "assets/README.md",
  "assets/pyproject.toml",
  "assets/dashboard/*",
  "assets/stacks/core/*/stack.yml",
]
