[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "luma-infra"
version = "0.1.117"
description = "Declarative deployment CLI for region-aware Nomad infrastructure."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0.1",
  "starlette>=0.49.0",
  "uvicorn[standard]>=0.38.0",
  "websockets>=15.0.1",
]

[project.scripts]
luma = "luma.cli:main"

[tool.setuptools.packages.find]
include = ["luma*"]

[tool.setuptools.package-data]
luma = [
  "assets/Dockerfile.control",
  "assets/README.md",
  "assets/pyproject.toml",
  "assets/dashboard/*",
]
