[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "lae-agent-runner"
version = "0.1.0"
description = "Deterministic LAE analyzer entry point for a Luma builder sandbox"
requires-python = ">=3.12"
dependencies = ["lae-agent-core", "lae-contracts", "lae-core"]

[project.scripts]
lae-agent-runner = "lae_agent_runner.__main__:main"

[tool.uv.sources]
lae-agent-core = { workspace = true }
lae-contracts = { workspace = true }
lae-core = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]
